--- a/Mobile-Store-Frontend/package.json
+++ b/Mobile-Store-Frontend/package.json
@@ -1,6 +1,5 @@
 {
   "name": "mobile-store-frontend",
-  "homepage": "https://Mobile-Store2025.github.io/Mobile-Store/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,16 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy":"npm run dev",
-    "deploy":"gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "firebase": "^11.3.1",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.7",
-    "gh-pages": "^6.3.0",
     "jwt-decode": "^4.0.0",
     "otp-input-react": "^0.3.0",
     "react": "^19.0.0",
